--- a/public/aws.html
+++ b/public/aws.html
@@ -10,7 +10,7 @@
   <body>
     <main class="margin-t-huge">
       <section aria-labelledby="installation-title" aria-describedby="installation-desc" class="container container-tiny margin-b-giant">
-        <h1 id="installation-title">Congratulations!</h1>
+        <h1 id="installation-title">Congratulations!!</h1>
         <div aria-hidden="true" style="height: 4px; width: 100%;" class="gradient-135-brand"></div>
         <p id="installation-desc" class="type-big">You are now running <strong>Bitnami LAMP 7.4.30</strong> in the Cloud.</p>
       </section>
